# space-station-game

./: Cargo.toml  README.md
assets/: EngineRoom.glb  EngineRoom.gltf  Valve_Sam.glb  valve.glb
src/: Particles.rs  main.rs
src/player/: camera_controller.rs  data.rs  mod.rs  player_controller.rs  player_spawner.rs
src/ship/: engine.rs  interactables_controllers.rs  mod.rs
src/world/: mesh.rs  mod.rs  ship.rs  types.rs  water.rs
