[package]
name = "space-station-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
noise = "0.8.2"
bevy_rapier3d = "0.21.0"
bevy-inspector-egui = "0.18.3"
lerp = "0.4.0"
serde = "1.0.160"
serde_json = "1.0.96"
bevy_hanabi = { version = "0.6.1", default-features = false, features = [ "3d" ],git = "https://github.com/djeedai/bevy_hanabi.git" }


[profile.dev.package.bevy_rapier3d]
opt-level = 3
[profile.dev.package.rapier3d]
opt-level = 3

